// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`M20230806 Features should do nothing 1`] = `
Array [
  Object {
    "key": "sample-feature-id",
    "value": Object {
      "feature": Object {
        "bbox": Array [
          1,
          2,
          3,
          4,
        ],
        "geometry": Object {
          "coordinates": Array [
            1,
            5,
          ],
          "type": "Point",
        },
        "id": "sample-feature-id",
        "properties": Object {
          "val": "var",
        },
        "type": "Feature",
      },
      "layerId": "test-layer-id-1",
      "version": 99,
    },
  },
]
`;

exports[`M20230806 Features should migrate 1`] = `
Array [
  Object {
    "key": "sample-feature-id",
    "value": Object {
      "feature": Object {
        "bbox": Array [
          1,
          2,
          3,
          4,
        ],
        "geometry": Object {
          "coordinates": Array [
            1,
            5,
          ],
          "type": "Point",
        },
        "id": "sample-feature-id",
        "properties": Object {
          "val": "var",
        },
        "type": "Feature",
      },
      "layerId": "test-layer-id-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 Layers should do nothing 1`] = `
Array [
  Object {
    "key": "test-layer-1",
    "value": Object {
      "layer": Object {
        "metadata": Object {
          "active": false,
          "id": "test-layer-1",
          "model": "OSM",
          "name": "OpenStreetMap",
          "opacity": 1,
          "type": "Predefined",
          "visible": true,
        },
        "type": "Predefined",
      },
      "version": 99,
    },
  },
]
`;

exports[`M20230806 Layers should migrate 1`] = `
Array [
  Object {
    "key": "test-layer-1",
    "value": Object {
      "layer": Object {
        "metadata": Object {
          "active": false,
          "id": "test-layer-1",
          "model": "OSM",
          "name": "OpenStreetMap",
          "opacity": 1,
          "type": "Predefined",
          "visible": true,
        },
        "type": "Predefined",
      },
      "version": 2,
    },
  },
]
`;

exports[`M20230806 Layouts should do nothing 1`] = `
Array [
  Object {
    "key": "test-layout-1",
    "value": Object {
      "entry": Object {
        "format": Object {
          "height": 297,
          "id": "A4_PORTRAIT",
          "orientation": "portrait",
          "width": 210,
        },
        "id": "test-layout-1",
        "name": "Sample layout",
        "textFrames": Array [
          Object {
            "content": Array [
              Object {
                "children": Array [
                  Object {
                    "text": "Hey man, how are you ?",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "id": "test-text-frame-1",
            "position": Object {
              "x": 10,
              "y": 10,
            },
            "size": Object {
              "height": 100,
              "width": 100,
            },
            "style": Object {
              "background": "#FFFFFF",
              "withBorders": true,
              "withShadows": true,
            },
          },
        ],
        "view": Object {
          "center": Array [
            1.5,
            45.4,
          ],
          "projection": Object {
            "name": "EPSG:3857",
          },
          "resolution": 1000,
          "rotation": 0,
        },
      },
      "id": "test-layout-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 Layouts should migrate 1`] = `
Array [
  Object {
    "key": "test-layout-1",
    "value": Object {
      "entry": Object {
        "format": Object {
          "height": 297,
          "id": "A4_PORTRAIT",
          "orientation": "portrait",
          "width": 210,
        },
        "id": "test-layout-1",
        "name": "Sample layout",
        "textFrames": Array [
          Object {
            "content": Array [
              Object {
                "children": Array [
                  Object {
                    "text": "Hey man, how are you ?",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "id": "test-text-frame-1",
            "position": Object {
              "x": 10,
              "y": 10,
            },
            "size": Object {
              "height": 100,
              "width": 100,
            },
            "style": Object {
              "background": "#FFFFFF",
              "withBorders": true,
              "withShadows": true,
            },
          },
        ],
        "view": Object {
          "center": Array [
            1.5,
            45.4,
          ],
          "projection": Object {
            "name": "EPSG:3857",
          },
          "resolution": 1000,
          "rotation": 0,
        },
      },
      "id": "test-layout-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 Projects should do nothing 1`] = `
Array [
  Object {
    "key": "test-project-1",
    "value": Object {
      "layerIds": Array [
        "layer-id-1",
        "layer-id-2",
        "layer-id-3",
      ],
      "layouts": Object {
        "abcMapAttributionsEnabled": true,
        "layoutIds": Array [
          "layout-id-1",
          "layout-id-2",
          "layout-id-3",
        ],
      },
      "metadata": Object {
        "id": "test-project-1",
        "name": "Test project 1",
        "public": false,
        "version": "1.3.0",
      },
      "sharedViews": Object {
        "fullscreen": false,
        "mapDimensions": Object {
          "height": 600,
          "width": 800,
        },
        "viewIds": Array [
          "shared-view-id-1",
          "shared-view-id-2",
          "shared-view-id-3",
        ],
      },
      "version": 99,
      "view": Object {
        "center": Array [
          1,
          2,
        ],
        "projection": Object {
          "name": "EPSG:3857",
        },
        "resolution": 1000,
        "rotation": 0,
      },
    },
  },
]
`;

exports[`M20230806 Projects should migrate 1`] = `
Array [
  Object {
    "key": "test-project-1",
    "value": Object {
      "layerIds": Array [
        "layer-id-1",
        "layer-id-2",
        "layer-id-3",
      ],
      "layouts": Object {
        "abcMapAttributionsEnabled": true,
        "layoutIds": Array [
          "layout-id-1",
          "layout-id-2",
          "layout-id-3",
        ],
      },
      "metadata": Object {
        "id": "test-project-1",
        "name": "Test project 1",
        "public": false,
        "version": "1.3.0",
      },
      "sharedViews": Object {
        "fullscreen": false,
        "mapDimensions": Object {
          "height": 600,
          "width": 800,
        },
        "viewIds": Array [
          "shared-view-id-1",
          "shared-view-id-2",
          "shared-view-id-3",
        ],
      },
      "version": 2,
      "view": Object {
        "center": Array [
          1,
          2,
        ],
        "projection": Object {
          "name": "EPSG:3857",
        },
        "resolution": 1000,
        "rotation": 0,
      },
    },
  },
]
`;

exports[`M20230806 SharedViews should do nothing 1`] = `
Array [
  Object {
    "key": "test-shared-view-1",
    "value": Object {
      "entry": Object {
        "id": "test-shared-view-1",
        "layers": Array [],
        "scale": Object {
          "x": 30,
          "y": 100,
        },
        "textFrames": Array [
          Object {
            "content": Array [
              Object {
                "children": Array [
                  Object {
                    "text": "Hey man, how are you ?",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "id": "test-text-frame-1",
            "position": Object {
              "x": 10,
              "y": 10,
            },
            "size": Object {
              "height": 100,
              "width": 100,
            },
            "style": Object {
              "background": "#FFFFFF",
              "withBorders": true,
              "withShadows": true,
            },
          },
        ],
        "title": "Sample layout",
        "view": Object {
          "center": Array [
            1.5,
            45.4,
          ],
          "projection": Object {
            "name": "EPSG:3857",
          },
          "resolution": 1000,
          "rotation": 0,
        },
      },
      "id": "test-shared-view-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 SharedViews should migrate 1`] = `
Array [
  Object {
    "key": "test-shared-view-1",
    "value": Object {
      "entry": Object {
        "id": "test-shared-view-1",
        "layers": Array [],
        "scale": Object {
          "x": 30,
          "y": 100,
        },
        "textFrames": Array [
          Object {
            "content": Array [
              Object {
                "children": Array [
                  Object {
                    "text": "Hey man, how are you ?",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "id": "test-text-frame-1",
            "position": Object {
              "x": 10,
              "y": 10,
            },
            "size": Object {
              "height": 100,
              "width": 100,
            },
            "style": Object {
              "background": "#FFFFFF",
              "withBorders": true,
              "withShadows": true,
            },
          },
        ],
        "title": "Sample layout",
        "view": Object {
          "center": Array [
            1.5,
            45.4,
          ],
          "projection": Object {
            "name": "EPSG:3857",
          },
          "resolution": 1000,
          "rotation": 0,
        },
      },
      "id": "test-shared-view-1",
      "version": 2,
    },
  },
]
`;

exports[`M20230806 Tiles should do nothing 1`] = `
Array [
  Object {
    "key": "http://1",
    "value": Object {
      "image": "blob data 1",
      "url": "http://1",
      "version": 99,
    },
  },
]
`;

exports[`M20230806 Tiles should migrate 1`] = `
Array [
  Object {
    "key": "http://1",
    "value": Object {
      "image": "blob data 1",
      "url": "http://1",
      "version": 2,
    },
  },
]
`;
